--- a/filedownloader/filedownloader-samples/res/layout/activity_main.xml
+++ b/filedownloader/filedownloader-samples/res/layout/activity_main.xml
@@ -11,34 +11,63 @@
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/hello_world"
+		android:text="0%"
         android:id="@+id/result" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/downloadpath"
-        android:layout_below="@+id/result"
-        android:layout_alignLeft="@+id/downloadpath"
-        android:layout_alignStart="@+id/downloadpath"
-        android:layout_marginTop="111dp"
-        android:text="http://192.168.1.100/alice.rmvb"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/downloadbar"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/result"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="100K 以下"
+        android:id="@+id/button"
+        android:layout_below="@+id/downloadbar"
+        android:layout_toRightOf="@+id/result" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1M 以下"
+        android:id="@+id/button2"
+        android:layout_alignBaseline="@+id/button4"
+        android:layout_alignBottom="@+id/button4"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="5M 以下"
+        android:id="@+id/button3"
+        android:layout_below="@+id/button"
+        android:layout_toRightOf="@+id/button5" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10M 以下"
+        android:id="@+id/button4"
+        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/button3"
+        android:layout_alignEnd="@+id/button3" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10M 以上"
+        android:id="@+id/button5"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="72dp" />
 
 
 </RelativeLayout>
