--- a/filedownloader/filedownloader-samples/res/layout/activity_main.xml
+++ b/filedownloader/filedownloader-samples/res/layout/activity_main.xml
@@ -19,18 +19,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0%"
-            android:id="@+id/result" />
+            android:id="@+id/result_view" />
 
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
+
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/downloadbar"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/result"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:id="@+id/downloadbar" />
 
 
     </LinearLayout>
