--- a/filedownloader/filedownloader-samples/res/layout/activity_down.xml
+++ b/filedownloader/filedownloader-samples/res/layout/activity_down.xml
@@ -102,6 +102,25 @@
         </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:id="@+id/linearLayout6">
+
+
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="暂停下载"
+                android:id="@+id/pause_btn" />
+
+
+        </LinearLayout>
+
+
 
 
     </LinearLayout>
