--- a/filedownloader/filedownloader-samples/res/layout/activity_main.xml
+++ b/filedownloader/filedownloader-samples/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 	tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
@@ -21,7 +21,7 @@
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
 
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/downloadbar" />
 
