--- a/filedownloader/filedownloader-samples/res/layout/activity_main.xml
+++ b/filedownloader/filedownloader-samples/res/layout/activity_main.xml
@@ -5,28 +5,28 @@
     android:orientation="vertical"
 	tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        >
+    <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!-->-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0%"
-            android:id="@+id/result_view" />
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="0%"-->
+            <!--android:id="@+id/result_view" />-->
 
-        <ProgressBar
-            style="?android:attr/progressBarStyleHorizontal"
+        <!--<ProgressBar-->
+            <!--style="?android:attr/progressBarStyleHorizontal"-->
 
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/downloadbar" />
+            <!--android:layout_width="200dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/downloadbar" />-->
 
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 
 
