fix text size in different resolution

--- a/filedownloader/filedownloader/res/layout/wait_notification_layout.xml
+++ b/filedownloader/filedownloader/res/layout/wait_notification_layout.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:text="Title"
             android:textStyle="bold"
-            android:textSize="15dp"
+            android:textSize="@dimen/text_size"
             android:textColor="#fff">
         </TextView>
 
@@ -32,7 +32,7 @@
             android:layout_marginRight="5dp"
             android:text="100 / 100"
             android:textStyle="normal"
-            android:textSize="15dp"
+            android:textSize="@dimen/text_size"
             android:textColor="#fff">
         </TextView>
 
@@ -45,7 +45,7 @@
             android:layout_marginTop="3dp"
             android:text="等待下载"
             android:textStyle="normal"
-            android:textSize="15dp"
+            android:textSize="@dimen/text_size"
             android:textColor="#fff">
         </TextView>
 
